@@ -6,6 +6,7 @@
 - Fix issue where multi-select fields were not visible in new filter action rows (#1489600)
 - Fix issue in displaying filter form when managesieve_kolab_master=true
   and sieve variables extension is supported by the server (#1489599)
+- Fix wrong action folder selection if managesieve_domains is not empty (#1489617)
 
 * version 7.1 [2013-11-22]
 -----------------------------------------------------------
